# Miniverse-Backend

./: .env-exemple  .env.debug.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose-debug.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0bae0007b159_add_online_mode_column.py  974e10781089_adding_java_version.py  a35a7fd95c00_add_allow_bedrock_to_miniverse.py  a524f7b6c960_initial_migration.py
app/: __init__.py  main.py
app/api/internal/: mcrouter.py
app/api/v1/: __init__.py  auth.py  files.py  minecraft.py  miniverses.py  mods.py  proxies.py  users.py  websockets.py
app/core/: __init__.py  channels.py  config.py  docker_status.py  logger.py  store.py  utils.py
app/db/: __init__.py  session.py
app/enums/: __init__.py  event_type.py  java_version.py  minecraft_version.py  miniverse_type.py  proxy_type.py  role.py
app/events/: miniverse_event.py  miniverse_events.py
app/managers/: ServerStatusManager.py  __init__.py
app/models/: __init__.py  miniverse.py  mod.py  proxy.py  user.py
app/schemas/: __init__.py  auth.py  common.py  events.py  fileinfo.py  minecraft.py  miniverse.py  mods.py  player.py  proxy.py  user.py
app/services/: auth_service.py  docker_service.py  files_service.py  minecraft_service.py  miniverse_service.py  mods_service.py  proxy_service.py  rpc_service.py  user_service.py  websocket_miniverse_service.py
app/services/configs_generator/: __init__.py  velocity_config_generator.py
app/services/connexion/: BaseMiniverseService.py  server_status_store.py  (+2 more)
keycloak/: Dockerfile
keycloak/import/: realm-export.json
mysql/: Dockerfile  init.sh
nginx/: Dockerfile  default.conf  entrypoint.sh
nginx/conf/: nginx.conf
(+1 files in other folders)
