[project]
name = "miniverse-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Louis Pagnier"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "litestar[jwt] (>=2.17.0,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "advanced-alchemy (>=1.6.0,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "python-socks (==2.7.2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false